# slicer-regbet

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/slicer_regbet/: cli.py  core.py  hdbet_script.py
