[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slicer-regbet"
version = "0.1.0"
description = "Batch registration (BRAINSFit affine 12-DOF) + HD-BET skull-stripping via 3D Slicer (headless)"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.scripts]
slicer-regbet = "slicer_regbet.cli:main"